[package]
name = "bouncy-ball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.21", features = ["csr"] }
rand = "0.8.5"
web-sys = { version="0.3.67", features = ["DomRect", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "Window", "TextMetrics", "Screen"] }
gloo-timers = "0.3.0"
gloo-console = "0.3.0"
